fixing colors on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -144,6 +144,10 @@ body {
     background-color: var(--button-background);
 }
 
+.linkButton span {
+    color: var(--light-color);
+}
+
 .linkLogo {
     width: 100%;
     height: 2em;
